tests/semantic/invalid/type_mismatch/cascade_errors.src
fn test() -> int {
    string s = "hello";
    int x = s;           
    bool b = x && true;  
    return b;            
}
